fixed video size on mobile devices

--- a/css/cayman.css
+++ b/css/cayman.css
@@ -218,3 +218,17 @@ background: linear-gradient(to top, #D4D3DD, #EFEFBB); /* W3C, IE 10+/ Edge, Fir
 .dropdown-menu {
   background-color: #8201ee;
 }
+
+.videoWrapper {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+.videoWrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
